--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+#Define o tipo de acao que sera tomada em caso de modificacao no banco de dados
+spring.jpa.hibernate.ddl-auto=update
+#Url usada pelo spring para se fazer a conexao com o banco de dados
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/dbcancerdemama
+spring.datasource.username=java
+spring.datasource.password=@Password
+#Driver para que seja possivel conectar com o banco
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
+
